<resources>
    <string-array name="ouinon">
        <item>Oui</item>
        <item>Non</item>
    </string-array>
    <string name="app_name">mesCourses</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="tv_mag_head">Magasins</string>
    <string name="tv_prod_head">Produits</string>
    <string name="tv_liens_head">Liens magasins/produits</string>
    <string name="tv_courses_head">Courses</string>
    <string name="tv_mag_body">Ajouter et gérer ici vos magasins \nfavoris</string>
    <string name="tv_prod_body">Ajouter et gérer ici vos produits \npréférés</string>
    <string name="tv_liens_body">Faites des liens entre vos magasins \net vos produits</string>
    <string name="tv_courses_body">Créer et gérer vos courses</string>

    <string name="tv_nom_magasin">Nom de l\'enseigne:</string>
    <string name="tv_adresse_magasin">Adresse:</string>
    <string name="tv_description_magasin">Notes:</string>
    <string name="tv_gps_magasin">Coordonnées GPS</string>
    <string name="tv_latitude_magasin">Latitude:</string>
    <string name="tv_longitude_magasin">Longitude:</string>

    <string name="tv_nom_produit">Nom du produit:</string>
    <string name="tv_marque_produit">Marque:</string>
    <string name="tv_description_produit">Notes sur le produit:</string>
    <string name="tv_prix_produit">Prix:</string>
    <string name="tv_poids_produit">Poids:</string>
    <string name="tv_manquant_produit">Produit manquant:</string>
    <string name="tv_favori_poids">Produit favori:</string>
    <string name="tv_photo_produit">Photo produit:</string>

    <string name="tb_liste_produit">Liste des produits</string>
    <string name="tb_liste_magasin">Liste des magasins</string>
    <string name="tb_liste_prodmag">Liens produits/magasins</string>
    <string name="t_liste_course">Liste des courses</string>
    <string name="tb_produit_detail">Détail du produit</string>
    <string name="tb_magasin_detail">Détail du magasin</string>
    <string name="tb_prodmag_detail">Détail du lien</string>
    <string name="tb_courses_detail">Détail des courses</string>


</resources>
