<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.mescourses.appli.mescourses.MenuActivity"
    tools:showIn="@layout/activity_main2"
    android:showDividers="end">

    <TableRow
        android:layout_marginBottom="3dp"
        android:layout_marginTop="3dp">

        <ImageButton
            android:id="@+id/imgb_mag"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:adjustViewBounds="true"
            android:background="@drawable/bouton_shops"
            android:cropToPadding="false"
            android:scaleType="fitCenter"/>
        <TableLayout android:layout_marginLeft="5dp" android:showDividers="end">
            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_mag_head"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:lines="2"
                    android:text="@string/tv_mag_body"
                    android:textSize="14sp" />
            </TableRow>
        </TableLayout>
    </TableRow>

    <TableRow android:layout_marginBottom="3dp" >
        <ImageButton
            android:id="@+id/imgb_prod"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:adjustViewBounds="true"
            android:background="@drawable/bouton_produits"
            android:cropToPadding="false"
            android:scaleType="fitCenter"/>

        <TableLayout  android:layout_marginLeft="5dp" android:showDividers="end">

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_prod_head"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:lines="2"
                    android:text="@string/tv_prod_body"
                    android:textSize="14sp" />
            </TableRow>
        </TableLayout>
    </TableRow>

    <TableRow android:layout_marginBottom="3dp">
        <ImageButton
            android:id="@+id/img_prodmag"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:adjustViewBounds="true"
            android:background="@drawable/bouton_produits_magasins"
            android:cropToPadding="false"
            android:scaleType="fitCenter"/>


        <TableLayout  android:layout_marginLeft="5dp" android:showDividers="end">

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_liens_head"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:lines="2"
                    android:text="@string/tv_liens_body"
                    android:textSize="14sp" />
            </TableRow>
        </TableLayout>
    </TableRow>

    <TableRow android:orientation="horizontal">

        <ImageButton
            android:id="@+id/imgb_courses"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:adjustViewBounds="true"
            android:background="@drawable/bouton_achat_internet"
            android:cropToPadding="false"
            android:scaleType="fitCenter"/>


        <TableLayout  android:layout_marginLeft="5dp" android:showDividers="end|middle">

            <TableRow>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_courses_head"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:lines="2"
                    android:text="@string/tv_courses_body"
                    android:textSize="14sp" />
            </TableRow>
        </TableLayout>

    </TableRow>

</TableLayout>
