<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/padding_list_row"
    android:paddingRight="@dimen/padding_list_row"
    android:paddingTop="@dimen/padding_list_row"
    android:paddingBottom="@dimen/padding_list_row"
    android:weightSum="1">
    <TextView
        android:id="@+id/tv_nomMagasinDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:text="@string/tv_nom_magasin"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textStyle="bold"
        android:layout_margin="5dp"
        />

    <EditText
        android:id="@+id/et_nomMagasinDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:inputType="text"
        android:textStyle="bold"
        android:enabled="false"

    />
    <TextView
        android:id="@+id/tv_adresseMagasinDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:lines="1"
        android:text="@string/tv_adresse_magasin"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:layout_margin="5dp"
        android:textStyle="bold"
        />
    <EditText
        android:id="@+id/et_adresseMagasinDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:inputType="text"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:enabled="false"

        />
    <TextView
        android:id="@+id/tv_posMagasinDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:text="@string/tv_gps_magasin"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:layout_margin="5dp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/tv_longitudeMagasinDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:lines="1"
        android:text="@string/tv_longitude_magasin"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:layout_margin="5dp"
        />
    <EditText
        android:id="@+id/et_longitudeMagasinDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:inputType="numberDecimal"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:enabled="false"
        />

     <TextView
        android:id="@+id/tv_latitudeMagasinDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:text="@string/tv_latitude_magasin"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:layout_margin="5dp"
        />
    <EditText
        android:id="@+id/et_latitudeMagasinDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:inputType="numberDecimal"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:enabled="false"
        />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:scaleType="fitCenter"
        android:src="@mipmap/_shops"
        android:layout_weight="0.41"/>
    <TableRow>
    <TextView
        android:id="@+id/tv_descriptionMagasinDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:gravity="left"
        android:lines="1"
        android:text="@string/tv_description_magasin"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textStyle="bold" />
    </TableRow>
    <TableRow>
    <EditText
        android:id="@+id/et_descriptionMagasinDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:enabled="false"
        android:gravity="left"
        android:inputType="text"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    </TableRow>

</TableLayout>