<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/padding_list_row"
        android:paddingRight="@dimen/padding_list_row"
        android:paddingTop="@dimen/padding_list_row"
        android:paddingBottom="@dimen/padding_list_row"
        android:weightSum="1">
        <TextView
            android:id="@+id/tv_nomProduitDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/tv_nom_produit"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="bold"
            android:layout_margin="5dp"
            />

        <EditText
            android:id="@+id/et_nomProduitDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:inputType="text"
            android:textStyle="bold"
            android:enabled="false"

            />
        <TextView
            android:id="@+id/tv_marqueProduitDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:lines="1"
            android:text="@string/tv_marque_produit"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_margin="5dp"
            android:textStyle="bold"
            />
        <EditText
            android:id="@+id/et_marqueProduitDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:inputType="text"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:enabled="false"

            />

           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_prixProduitDetail"
            android:gravity="left"
            android:text="@string/tv_prix_produit"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_margin="5dp"
            android:textStyle="bold"
            />
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/et_prixProduitDetail"
            android:gravity="left"
            android:inputType="text"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:enabled="false"
            android:layout_margin="5dp"
            android:hint="          "

            />

           <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_poidsProduitDetail"
            android:gravity="left"
            android:text="@string/tv_poids_produit"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_margin="5dp"
            android:textStyle="bold"
            />
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/et_poidsProduitDetail"
            android:gravity="left"
            android:inputType="numberDecimal"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:enabled="false"
            android:layout_margin="5dp"
            android:hint="          "
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_manqueProduitDetail"
            android:gravity="left"
            android:text="@string/tv_manquant_produit"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_margin="5dp"
            android:textStyle="bold"
            />

            <Spinner
                android:id="@+id/sp_manqueProduitDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:enabled="false"
                android:entries="@array/ouinon"

                />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_photoProduitDetail"
            android:gravity="left"
            android:text="@string/tv_photo_produit"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_margin="5dp"
            android:textStyle="bold"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:scaleType="fitCenter"
            android:src="@mipmap/_shops"
            android:layout_weight="0.75"/>
        <TableRow>

            <TextView
                android:id="@+id/tv_descriptionProduitDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:gravity="left"
                android:lines="2"
                android:text="@string/tv_description_produit"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="bold" />
        </TableRow>
        <TableRow>

            <EditText
                android:id="@+id/et_descriptionProduitDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:enabled="false"
                android:gravity="left"
                android:inputType="textMultiLine"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </TableRow>

    </TableLayout>
</LinearLayout>